Alpha BLEND and SHADOW together cause crash #67753

Closed
opened 2019-07-26 19:26:51 +02:00 by Tyler Walker · 7 comments

System Information
Operating system: Windows 10
Graphics card: RX 580

Blender Version
Broken: (example: 2.80, RC 3)
Worked: (optional) - during May beta

Short description of error
image.png
Using the base material, if I set blend mode and shadow mode to any form of alpha blender crashes.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).Midoriya_2.8.blend

**System Information** Operating system: Windows 10 Graphics card: RX 580 **Blender Version** Broken: (example: 2.80, RC 3) Worked: (optional) - during May beta **Short description of error** ![image.png](https://archive.blender.org/developer/F7630106/image.png) Using the base material, if I set blend mode and shadow mode to any form of alpha blender crashes. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible).[Midoriya_2.8.blend](https://archive.blender.org/developer/F7630110/Midoriya_2.8.blend)
Author

Added subscriber: @tyler.tofu

Added subscriber: @tyler.tofu

Added subscriber: @rjg

Added subscriber: @rjg

I can reproduce the error with 79ce2054d4. Besides that I get 10 dependency cycle warnings and two invalid driver errors.

console_errors.txt

blender.exe!ntree_shader_output_node_from_group(bNodeTree * ntree, int target) Line 303	C
blender.exe!ntreeGPUMaterialNodes(bNodeTree * localtree, GPUMaterial * mat, bool * has_surface_output, bool * has_volume_output) Line 917	C
blender.exe!GPU_material_from_nodetree(Scene * scene, Material * ma, bNodeTree * ntree, ListBase * gpumaterials, const void * engine_type, int options, const unsigned char * vert_code, const unsigned char * geom_code, const unsigned char * frag_lib, const unsigned char * defines, const unsigned char * name) Line 666	C
blender.exe!DRW_shader_create_from_material(Scene * scene, Material * ma, const void * engine_type, int options, const unsigned char * vert, const unsigned char * geom, const unsigned char * frag_lib, const unsigned char * defines, bool deferred) Line 443	C
blender.exe!EEVEE_material_mesh_depth_get(Scene * scene, Material * ma, bool use_hashed_alpha, bool is_shadow) Line 826	C
blender.exe!EEVEE_materials_cache_populate(EEVEE_Data * vedata, EEVEE_ViewLayerData * sldata, Object * ob, bool * cast_shadow) Line 1689	C
blender.exe!EEVEE_render_cache(void * vedata, Object * ob, RenderEngine * engine, Depsgraph * UNUSED_depsgraph) Line 191	C
blender.exe!DRW_render_object_iter(void * vedata, RenderEngine * engine, Depsgraph * depsgraph, void(*)(void *, Object *, RenderEngine *, Depsgraph *) callback) Line 2072	C
blender.exe!eevee_render_to_image(void * vedata, RenderEngine * engine, RenderLayer * render_layer, const rcti * rect) Line 452	C
blender.exe!DRW_render_to_image(RenderEngine * engine, Depsgraph * depsgraph) Line 2014	C
blender.exe!RE_engine_render(Render * re, int do_all) Line 786	C
blender.exe!do_render_3d(Render * re) Line 1148	C
blender.exe!RE_PreviewRender(Render * re, Main * bmain, Scene * sce) Line 2777	C
blender.exe!shader_preview_render(ShaderPreview * sp, ID * id, int split, int first) Line 908	C
blender.exe!shader_preview_startjob(void * customdata, short * stop, short * do_update) Line 946	C
blender.exe!common_preview_startjob(void * customdata, short * stop, short * do_update, float * UNUSED_progress) Line 1176	C
blender.exe!do_job_thread(void * job_v) Line 384	C
blender.exe!tslot_thread_start(void * tslot_p) Line 261	C
[External Code]	
blender.exe!invoke_thread_procedure(unsigned int(*)(void *) procedure, void * const context) Line 92	C++
blender.exe!thread_start<unsigned int (__cdecl*)(void * __ptr64)>(void * const parameter) Line 115	C++
[External Code]
I can reproduce the error with 79ce2054d4362f39cd4083992098b7378861a4c8. Besides that I get 10 dependency cycle warnings and two invalid driver errors. [console_errors.txt](https://archive.blender.org/developer/F7630181/console_errors.txt) ``` blender.exe!ntree_shader_output_node_from_group(bNodeTree * ntree, int target) Line 303 C blender.exe!ntreeGPUMaterialNodes(bNodeTree * localtree, GPUMaterial * mat, bool * has_surface_output, bool * has_volume_output) Line 917 C blender.exe!GPU_material_from_nodetree(Scene * scene, Material * ma, bNodeTree * ntree, ListBase * gpumaterials, const void * engine_type, int options, const unsigned char * vert_code, const unsigned char * geom_code, const unsigned char * frag_lib, const unsigned char * defines, const unsigned char * name) Line 666 C blender.exe!DRW_shader_create_from_material(Scene * scene, Material * ma, const void * engine_type, int options, const unsigned char * vert, const unsigned char * geom, const unsigned char * frag_lib, const unsigned char * defines, bool deferred) Line 443 C blender.exe!EEVEE_material_mesh_depth_get(Scene * scene, Material * ma, bool use_hashed_alpha, bool is_shadow) Line 826 C blender.exe!EEVEE_materials_cache_populate(EEVEE_Data * vedata, EEVEE_ViewLayerData * sldata, Object * ob, bool * cast_shadow) Line 1689 C blender.exe!EEVEE_render_cache(void * vedata, Object * ob, RenderEngine * engine, Depsgraph * UNUSED_depsgraph) Line 191 C blender.exe!DRW_render_object_iter(void * vedata, RenderEngine * engine, Depsgraph * depsgraph, void(*)(void *, Object *, RenderEngine *, Depsgraph *) callback) Line 2072 C blender.exe!eevee_render_to_image(void * vedata, RenderEngine * engine, RenderLayer * render_layer, const rcti * rect) Line 452 C blender.exe!DRW_render_to_image(RenderEngine * engine, Depsgraph * depsgraph) Line 2014 C blender.exe!RE_engine_render(Render * re, int do_all) Line 786 C blender.exe!do_render_3d(Render * re) Line 1148 C blender.exe!RE_PreviewRender(Render * re, Main * bmain, Scene * sce) Line 2777 C blender.exe!shader_preview_render(ShaderPreview * sp, ID * id, int split, int first) Line 908 C blender.exe!shader_preview_startjob(void * customdata, short * stop, short * do_update) Line 946 C blender.exe!common_preview_startjob(void * customdata, short * stop, short * do_update, float * UNUSED_progress) Line 1176 C blender.exe!do_job_thread(void * job_v) Line 384 C blender.exe!tslot_thread_start(void * tslot_p) Line 261 C [External Code] blender.exe!invoke_thread_procedure(unsigned int(*)(void *) procedure, void * const context) Line 92 C++ blender.exe!thread_start<unsigned int (__cdecl*)(void * __ptr64)>(void * const parameter) Line 115 C++ [External Code] ```

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Clément Foucault was assigned by Germano Cavalcante 2019-07-26 21:04:51 +02:00

Here is a simplified file:
tmp2.blend

Here is a simplified file: [tmp2.blend](https://archive.blender.org/developer/F7630229/tmp2.blend)

This issue was referenced by a856c5eccf

This issue was referenced by a856c5eccffba817a1e9ac499e0156fc6d4eb3c3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67753
No description provided.