Fix T67753 EEVEE: Crash using transparent shadows with default material